k8s/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diaspomoney-mongo
  namespace: diaspomoney
  labels:
    app: diaspomoney-mongo
spec:
  selector:
    app: diaspomoney-mongo
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongodb
  type: ClusterIP
