k8s/mongodb/ingress-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongo-tcp
  namespace: diaspomoney
spec:
  entryPoints:
    - mongo
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: allow-dev-ip
      services:
        - name: diaspomoney-mongo
          port: 27017
  tls:
    passthrough: true
